--- a/index_template.html
+++ b/index_template.html
@@ -446,43 +446,8 @@
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
                 <h2>RSVP</h2>
-                <p>We would greatly appreciate if you could RSVP before August 1st, 2024</p>
-                <p>If you cannot attend, please RSVP with a "0" for the "Number of Guests"</p>
-                <form id="rsvp-form" class="rsvp-form"
-                      action=""
-                      >
-                    <div class="row">
-                        <div class="col-md-6 col-sm-6">
-                            <div class="form-input-group">
-                                <i class="fa fa-user"></i><input id="rsvp-givenname"  name="givenname" class=""
-                                                                     placeholder="First name"
-                                                                     required>
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-sm-6">
-                            <div class="form-input-group">
-                                <i class="fa fa-user"></i><input id="rsvp-surname" name="surname" class=""
-                                                                 placeholder="Last name"
-                                                                 required>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-12 col-sm-6">
-                            <div class="form-input-group">
-                                <i class="fa fa-users"></i><input type="number" name="numguests" class="" min="0"
-                                                                  max="7"
-                                                                  placeholder="Number of Guests"
-                                                                  required>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-12" id="alert-wrapper"></div>
-                    </div>
-                    <button class="btn-fill rsvp-btn">
-                        We'll be there!
-                    </button>
+                <p>Our RSVP date has already passed</p>
+                <p>Please reach out to either the bride or the groom to see if we can accomdate your party</p>
                 </form>
             </div>
         </div>
